fix: Minor a11y & layout issues for "So, I'm Blogging Again" post

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 
 body {
     margin: 0;
+    line-height: 1.5;
 }
 
 select, textarea, input, button {
@@ -88,6 +89,29 @@ select, textarea, input, button {
         text-wrap: pretty;
         max-width: var(--readable-width);
         margin-inline: auto;
+    }
+}
+
+.post {
+    & .song {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    & .song__quote {
+        white-space: pre-line;
+        line-height: 1.2;
+    }
+
+    & .song__caption {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .song__comment {
+        font-style: italic;
     }
 }
 
